perf: add look-aside redis caching with penetration protection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,20 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
 volumes:
   db-shard-0-data:
   db-shard-1-data:
   db-shard-2-data:
+  redis-data:
