arch: decouple analytics using redpanda event stream

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,8 +61,32 @@ services:
       timeout: 5s
       retries: 5
 
+  redpanda:
+    image: redpandadata/redpanda:latest
+    container_name: redpanda
+    ports:
+      - "9092:9092"
+      - "9644:9644"
+    command:
+      - redpanda start
+      - --node-id 0
+      - --kafka-addr PLAINTEXT://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092
+      - --advertise-kafka-addr PLAINTEXT://redpanda:29092,OUTSIDE://localhost:9092
+      - --smp 1
+      - --memory 1G
+      - --overprovisioned
+      - --set redpanda.enable_idempotence=true
+    volumes:
+      - redpanda-data:/var/lib/redpanda/data
+    healthcheck:
+      test: ["CMD", "rpk", "cluster", "health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
 volumes:
   db-shard-0-data:
   db-shard-1-data:
   db-shard-2-data:
   redis-data:
+  redpanda-data:
