--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-uvicorn
-fastapi
-sqlalchemy[asyncpg]
-asyncpg
-greenlet
+httptools
+Jinja2
+matplotlib
+pandas
 pydantic-settings
-psycopg2-binary
-uhashring
+python-dotenv
+python-multipart
+requests==2.31.0
 redis
 aiokafka
-huggingface-hub
-python-dotenv
-Jinja2
-python-multipart
-pandas
+asyncpg
+fastapi
+greenlet
 prometheus_client
+psycopg2-binary
+sqlalchemy[asyncpg]
+uhashring
+uvicorn
+uvloop
