--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,18 +1,9 @@
-
 version: '3.8'
 services:
   app:
-    # --- FastAPI/Uvicorn Optimizations ---
-    # UVICORN_WORKERS: Set to a value like 2x the number of CPU cores. '4' is a good starting point.
-    # UVICORN_BACKLOG: Increases the number of queued connections Uvicorn will hold.
-    # DEBUG: Must be 'false' for production performance.
-    environment:
-      - UVICORN_WORKERS=4
-      - UVICORN_BACKLOG=2048
-      - DEBUG=false
-    # Command to run uvicorn with high-performance settings.
-    # --loop uvloop: A much faster implementation of the asyncio event loop.
-    # --http httptools: A faster HTTP parser.
+    volumes:
+      - .:/app # Mount current directory for live code changes
+
   db-shard-0:
     # --- PostgreSQL Optimizations ---
     # max_connections: Allows more clients to connect. Default is 100.
